JumpScript/tests/baselines/reference/nestedBlockScopedBindings7.errors.txt
tests/cases/compiler/nestedBlockScopedBindings7.jump(2,5): error TS7027: Unreachable code detected.
tests/cases/compiler/nestedBlockScopedBindings7.jump(6,5): error TS7027: Unreachable code detected.


==== tests/cases/compiler/nestedBlockScopedBindings7.jump (2 errors) ====
    for (let x; false;) {
        () => x;
        ~
!!! error TS7027: Unreachable code detected.
    }
    
    for (let y; false;) {
        y = 1;
        ~
!!! error TS7027: Unreachable code detected.
    }